--- a/.github/workflows/docker-repo.yml
+++ b/.github/workflows/docker-repo.yml
@@ -62,4 +62,17 @@ jobs:
 
     - name: Test app
       run: dotnet test --no-build
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: Build and push
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: user/app:latest
+        #aagaciak/azure-webapp
