--- a/.github/workflows/docker-repo.yml
+++ b/.github/workflows/docker-repo.yml
@@ -63,6 +63,12 @@ jobs:
     - name: Test app
       run: dotnet test --no-build
     
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+        
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
