--- a/.github/workflows/docker-repo.yml
+++ b/.github/workflows/docker-repo.yml
@@ -64,6 +64,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v1
       with:
+        version: v0.7.0
         context: .
         push: true
         tags: user/app:latest
