--- a/.github/workflows/docker-repo.yml
+++ b/.github/workflows/docker-repo.yml
@@ -13,29 +13,9 @@
 name: "Docker repository"
 
 on:
-  workflow_dispatch:
-    inputs:
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning' 
-        type: choice
-        options:
-        - info
-        - warning
-        - debug 
-      print_tags:
-        description: 'True to print to STDOUT'
-        required: true 
-        type: boolean 
-      tags:
-        description: 'Test scenario tags'
-        required: true 
-        type: string
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true 
+  push:
+    branches:
+      - 'main'
 
 env:
   AZURE_WEBAPP_NAME: servicewebapp112aa  # set this to your application's name
