--- a/.github/workflows/docker-repo.yml
+++ b/.github/workflows/docker-repo.yml
@@ -15,7 +15,7 @@ name: "Docker repository"
 on:
   push:
     branches:
-      - 'main'
+      - 'master'
 
 env:
   AZURE_WEBAPP_NAME: servicewebapp112aa  # set this to your application's name
