--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,3 +1,4 @@
+
 # This workflow will build and push a .NET Core application to an Azure Web App on every push to the master branch.
 #
 # To configure this workflow:
@@ -9,16 +10,32 @@
 #
 # For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
-name: "Build and Deploy"
+name: "Docker repository"
 
 on:
-  push:
-    branches:
-      - master
-    paths-ignore:
-      - '**/*.md'
-      - '**/*.gitignore'
-      - '**/*.gitattributes'
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning' 
+        type: choice
+        options:
+        - info
+        - warning
+        - debug 
+      print_tags:
+        description: 'True to print to STDOUT'
+        required: true 
+        type: boolean 
+      tags:
+        description: 'Test scenario tags'
+        required: true 
+        type: string
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true 
 
 env:
   AZURE_WEBAPP_NAME: servicewebapp112aa  # set this to your application's name
@@ -45,19 +62,17 @@ jobs:
 
     - name: Test app
       run: dotnet test --no-build
-
-    - name: Publish app for deploy
-      run: dotnet publish --configuration Release --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-
-    - name: 'Deploy to Azure WebApp'
-      uses: azure/webapps-deploy@v1
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v1.0.0
+    - name: Build and push
+      uses: docker/build-push-action@v3
       with:
-        name: webapp
-        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        context: .
+        push: true
+        tags: user/app:latest
+        #aagaciak/azure-webapp
