--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+obj/*
+bin/*
+.vs/*
+Container*
+obj/Container/ContainerRunContext.cache
+obj/Container/ContainerName.cache
+obj/Container/ContainerId.cache
+obj/Container/ContainerDevelopmentMode.cache
+.vs/webapp_aa1/v17/.suo
