--- a/.github/workflows/docker-manual.yml
+++ b/.github/workflows/docker-manual.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build docker image
-        working-directory: 03-app-dotnet
+        working-directory: .
         run: docker build . --file Dockerfile --tag my-app-dotnet:$(date +%s)
