--- a/.github/workflows/SonarQubeManual.yml
+++ b/.github/workflows/SonarQubeManual.yml
@@ -5,11 +5,17 @@ on:
       - master
   pull_request:
     types: [opened, synchronize, reopened]
+env:
+  AZURE_WEBAPP_NAME: servicewebapp112aa  # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: './published'      # set this to the path to your web app project, defaults to the repository root
+  NETCORE_VERSION: '7.0.x'                    # set this to the .NET Core version to use
+  
 jobs:
   build:
     name: Build and analyze
     runs-on: windows-latest
     steps:
+    
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -18,6 +24,15 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
           
+      - name: Setup .NET Core SDK ${{ env.NETCORE_VERSION }}
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ env.NETCORE_VERSION }}
+        
+      - name: Restore packages
+        run: dotnet restore
+
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
