--- a/.github/workflows/sonarqube2.yml
+++ b/.github/workflows/sonarqube2.yml
@@ -27,11 +27,12 @@
 name: SonarQube analysis
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
   workflow_dispatch:
+  #push:
+  #  branches: [ "master" ]
+  #pull_request:
+  #  branches: [ "master" ]
+  
 
 permissions:
   pull-requests: read # allows SonarQube to decorate PRs with analysis results
