--- a/.github/workflows/docker-manual.yml
+++ b/.github/workflows/docker-manual.yml
@@ -1,12 +1,11 @@
 name: Docker manual
 
 on:
-  push:
-    branches:
-      - "master"
-
   workflow_dispatch:
- 
+  #push:
+  #  branches:
+  #    - "master"
+
 jobs:
   build-container:
     runs-on:  ubuntu-latest
