--- a/.github/workflows/docker-repo.yml
+++ b/.github/workflows/docker-repo.yml
@@ -13,9 +13,10 @@
 name: "Docker repository"
 
 on:
-  push:
-    branches:
-      - 'master'
+  workflow_dispatch:
+  #push:
+  #  branches:
+  #    - 'master'
 
 env:
   AZURE_WEBAPP_NAME: servicewebapp112aa  # set this to your application's name
