--- a/.github/workflows/SonarQubeManual.yml
+++ b/.github/workflows/SonarQubeManual.yml
@@ -1,10 +1,12 @@
 name: SonarCloud manual
 on:
-  push:
-    branches:
-      - master
-  pull_request:
-    types: [opened, synchronize, reopened]
+  workflow_dispatch:
+  #push:
+  #  branches:
+  #    - master
+  #pull_request:
+  #  types: [opened, synchronize, reopened]
+  
 env:
   AZURE_WEBAPP_NAME: servicewebapp112aa  # set this to your application's name
   AZURE_WEBAPP_PACKAGE_PATH: './published'      # set this to the path to your web app project, defaults to the repository root
