changed image name

--- a/.github/workflows/docker_to-azure-cr.yml
+++ b/.github/workflows/docker_to-azure-cr.yml
@@ -1,3 +1,5 @@
+#https://github.com/marketplace/actions/azure-container-registry-build?version=v1
+
 name: Azure Container Registry Build and Deploy
 
 on:
@@ -19,7 +21,7 @@ jobs:
           tenant: ${{ secrets.Azure_tenant }}
           registry: ${{ secrets.Azure_Container_Registry_name }}
           repository: ${{ secrets.Azure_Container_Registry_Repository }}
-          image: image
+          image: esone:1
           git_access_token: ${{ secrets.git_access_token }}
           folder: src/docker
           dockerfile: ./Dockerfile
