--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,7 +22,12 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Setup npm package
+      run: npm init -y && npm install
+
+    - name: code checkout
+      uses: actions/checkout@v3
+
     - name: load cypress
       uses: cypress-io/github-action@v5
       with:
