--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,8 +22,6 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-    - name: Setup npm package
-      run: npm init -y && npm install
 
     - name: code checkout
       uses: actions/checkout@v3
@@ -31,6 +29,8 @@ jobs:
     - name: load cypress
       uses: cypress-io/github-action@v5
       with:
+        build: npm run build
+        start: npm start
         browser: chrome
         record: true
       env:
