--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -25,7 +25,12 @@ jobs:
 
     - name: code checkout
       uses: actions/checkout@v3
-
+      
+    - name: Set up Node.js version
+      uses: actions/setup-node@v1
+      with:
+        node-version: '14.x'
+        
     - name: load cypress
       uses: cypress-io/github-action@v5
       with:
