--- a/webapp_aa1.csproj
+++ b/webapp_aa1.csproj
@@ -7,7 +7,9 @@
     <UserSecretsId>cb277d9a-fbad-4118-b60b-7e8427733eec</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+	<RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
