--- a/.github/workflows/cypress-manual.yml
+++ b/.github/workflows/cypress-manual.yml
@@ -8,14 +8,13 @@ jobs:
   
   cypress-run:
     runs-on: ubuntu-latest
-    steps:
 
-    - name: code checkout
-      uses: actions/checkout@v3
-      
-      
-    - name: load cypress
-      uses: cypress-io/github-action@v5
-      with:
-        runTests: false
+    steps:
+      - name: code checkout
+        uses: actions/checkout@master
+
+      - name: Install dependencies
+        uses: cypress-io/github-action@v5
+        with:        
+          runTests: false
         
