--- a/.github/workflows/cypress-manual.yml
+++ b/.github/workflows/cypress-manual.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Install dependencies
         uses: cypress-io/github-action@v5
         with:        
-          runTests: false
+          runTests: true
         
