--- a/.github/workflows/cypress-manual.yml
+++ b/.github/workflows/cypress-manual.yml
@@ -27,6 +27,8 @@ jobs:
       - name: build packages
         run: dotnet build --configuration Release --no-restore
 
+      - name: run webapp localy
+        run: dotnet run
 
       - name: run tests
         uses: cypress-io/github-action@v5
