--- a/.github/workflows/cypress-manual.yml
+++ b/.github/workflows/cypress-manual.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Restore packages
         run: dotnet restore
 
-      - name: build packages
-        run: dotnet build --configuration Release --no-restore
+      #- name: build packages
+      #  run: dotnet build --configuration Release --no-restore
 
       #- name: run webapp localy
       #  run: dotnet run
@@ -33,6 +33,8 @@ jobs:
       - name: run tests
         uses: cypress-io/github-action@v5
         with:        
-          start: dotnet run
+          start: dotnet run --no-restore
           runTests: true
+          browser: chrome
+          headed: false
         
