--- a/.github/workflows/cypress-manual.yml
+++ b/.github/workflows/cypress-manual.yml
@@ -33,8 +33,15 @@ jobs:
       - name: run tests
         uses: cypress-io/github-action@v5
         with:        
+          build: dotnet build --configuration Release --no-restore
           start: dotnet run --no-restore
           runTests: true
           browser: chrome
           headed: false
+          record: true
+        env:
+          # pass the Cypress Cloud record key as an environment variable
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # pass GitHub token to allow accurately detecting a build vs a re-run build
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
