--- a/.github/workflows/cypress-manual.yml
+++ b/.github/workflows/cypress-manual.yml
@@ -6,6 +6,7 @@ on:
   
 env:  
   NETCORE_VERSION: '7.0.x'
+  CYPRESS_RECORD_KEY: '079dcb48-f7d3-42fa-bb9c-7c63c476684e'
 
 jobs:
   
@@ -24,8 +25,8 @@ jobs:
       - name: Restore packages
         run: dotnet restore
 
-      - name: echo
-        run: export CYPRESS_RECORD_KEY="079dcb48-f7d3-42fa-bb9c-7c63c476684e"
+      #- name: echo
+      #  run: export CYPRESS_RECORD_KEY="079dcb48-f7d3-42fa-bb9c-7c63c476684e"
 
       - name: echo
         run: echo $CYPRESS_RECORD_KEY 
