--- a/.github/workflows/cypress-manual.yml
+++ b/.github/workflows/cypress-manual.yml
@@ -25,12 +25,6 @@ jobs:
       - name: Restore packages
         run: dotnet restore
 
-      #- name: echo
-      #  run: export CYPRESS_RECORD_KEY="079dcb48-f7d3-42fa-bb9c-7c63c476684e"
-
-      - name: echo
-        run: echo $CYPRESS_RECORD_KEY 
-
       - name: run tests
         uses: cypress-io/github-action@v5
         with:        
@@ -40,7 +34,7 @@ jobs:
           browser: chrome
           headed: false
           record: true
-        env:
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}          
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #env:
+        #  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}          
+        #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
